# genbotx-rag-assistant

./: .env.example  .gitignore  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  comprehensive_performance_test.py  config.yaml  document_processing_test.py  install.py  main.py  pyproject.toml  setup.py  test_confidence_optimization.py  test_config.py  test_enhanced_confidence.py  test_webscraping_performance.py
documents/: Krishnadevaraya_Wikipedia.docx  kuru_kingdom_Kuru_kingdom.txt  transformers_Transformers_(film_series).txt  wikipedia_urls.txt
src/: __init__.py  config.py  config_ui.py  content_manager.py  document_processor.py  rag_engine.py  vector_store_manager.py  wikipedia_scraper.py
vector_store/: chroma.sqlite3
